{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 44,
  "lineage": "b585a459-9f73-2813-64ac-7d78553b8898",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke-003/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-frontend-servers",
            "location": "westeurope",
            "name": "nsg-subnet-frontend-servers",
            "resource_group_name": "rg-spoke-003",
            "security_rule": [
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "rule-deny-all-outbound",
                "priority": 900,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule-allow-vm01-to-vm02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.1.4",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke-003/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-frontend-servers/securityRules/rule-allow-vm01-to-vm02",
            "name": "rule-allow-vm01-to-vm02",
            "network_security_group_name": "nsg-subnet-frontend-servers",
            "priority": 800,
            "protocol": "Tcp",
            "resource_group_name": "rg-spoke-003",
            "source_address_prefix": "10.0.1.5",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-frontend-servers",
            "azurerm_virtual_network.vnet",
            "module.vm-01.azurerm_linux_virtual_machine.vm",
            "module.vm-01.azurerm_network_interface.nic_vm",
            "module.vm-01.azurerm_public_ip.pip_vm",
            "module.vm-02.azurerm_linux_virtual_machine.vm",
            "module.vm-02.azurerm_network_interface.nic_vm",
            "module.vm-02.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule-deny-all-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke-003/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-frontend-servers/securityRules/rule-deny-all-outbound",
            "name": "rule-deny-all-outbound",
            "network_security_group_name": "nsg-subnet-frontend-servers",
            "priority": 900,
            "protocol": "Tcp",
            "resource_group_name": "rg-spoke-003",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke-003/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-spoke-003",
            "virtual_network_name": "vnet-spoke"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-frontend-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke-003/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/subnet-frontend-servers",
            "name": "subnet-frontend-servers",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-spoke-003",
            "virtual_network_name": "vnet-spoke"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke-003/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/subnet-frontend-servers",
            "network_security_group_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke-003/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-frontend-servers",
            "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke-003/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/subnet-frontend-servers"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-frontend-servers",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a691c732-036e-4330-ad86-81ed3758eba6",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke-003/providers/Microsoft.Network/virtualNetworks/vnet-spoke",
            "location": "westeurope",
            "name": "vnet-spoke",
            "resource_group_name": "rg-spoke-003",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/27",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke-003/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke-003/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/subnet-frontend-servers",
                "name": "subnet-frontend-servers",
                "security_group": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke-003/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-frontend-servers"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke-003/providers/Microsoft.Network/publicIPAddresses/pip-bastion",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.93.70.87",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-bastion",
            "resource_group_name": "rg-spoke-003",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm-01",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke-003/providers/Microsoft.Network/networkInterfaces/nic-vm-01",
            "internal_domain_name_suffix": "gldzdjtoamyehlmgqhwtowhlug.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke-003/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/subnet-frontend-servers"
              }
            ],
            "location": "westeurope",
            "name": "nic-vm-01",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "rg-spoke-003"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-frontend-servers",
            "azurerm_virtual_network.vnet",
            "module.vm-01.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    },
    {
      "module": "module.vm-02",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke-003/providers/Microsoft.Network/networkInterfaces/nic-vm-02",
            "internal_domain_name_suffix": "gldzdjtoamyehlmgqhwtowhlug.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-spoke-003/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/subnet-frontend-servers"
              }
            ],
            "location": "westeurope",
            "name": "nic-vm-02",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-spoke-003"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-frontend-servers",
            "azurerm_virtual_network.vnet",
            "module.vm-02.azurerm_public_ip.pip_vm"
          ]
        }
      ]
    }
  ]
}